# StreamBillGeneratorNew

./: app.py  packages.txt  pyproject.toml  replit.md  requirements.txt  test_upload.py
assets/: balloon.js  style.css
attached_assets/: BILL AND DEVIATION APPROVED 02 APRIL 2005_1752800156599.xlsm  OVERALL_VIEW_1752800156600.TXT  STRICT _COMPLIANCE_1752800156599.txt  You_are_my_assistant_1752800156599.md  certificate_ii_1752800156603.html  deviation_statement_1752800156602.html  extra_items_1752800156603.html  first_page_1752800156602.html  note_sheet_1752800156602.html
templates/: certificate_iii.html  deviation_statement.html  extra_items.html  first_page.html  note_sheet.html
utils/: excel_processor.py  pdf_generator.py  report_generator.py  template_renderer.py
